--- a/trunk/ ttdc --username trevisthomas/River/war/css/basic.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/basic.css
@@ -214,7 +214,8 @@ body{text-align:center; margin: 0 auto;}
 
 
 
-	
+.tt-color-nws{ border-color: red; background-color: #FFE8EB; }
+.tt-color-inf{ border-color: #F5F23B; background-color: #FFFFE6; }	
 	
 
 
