--- a/trunk/ ttdc --username trevisthomas/River/war/css/basic.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/basic.css
@@ -26,6 +26,7 @@ body{text-align:center; margin: 0 auto;}
 .tt-post-expanded-date,
 .tt-post-panel-head-date,
 .tt-text-small{font-size:10px;}
+.tt-options-button,
 .tt-post-expanded-creator,
 .tt-post-panel-head-creator,
 .tt-text-normal{font-size:12px;}
@@ -44,7 +45,9 @@ body{text-align:center; margin: 0 auto;}
 .tt-post-panel-head-creator{padding: 0 0 0 2px;}
 .tt-post-expanded{ border-width: 1px; border-style:solid; margin: 2px 0; padding:0px; width: 100%;}
 .tt-post-conversation{ margin: 0 0 20px 0;}
+.tt-options-button{border: 1px solid; padding:2px;}
 
+.tt-post-summary-body{padding:0px 2px;}
 
 /*
 .tt-post-expanded-content{width:100%; clear:both;}
@@ -205,7 +208,6 @@ body{text-align:center; margin: 0 auto;}
 .tt-color-contrast3{ border-color: #ccc; background-color: #fcfcfc;}
 */
 
-.tt-color-search-results-header{color: grey;}
 	
 .tt-color-month-week-header,	
 .tt-color-calendar-small-month-week{ background: grey; color: white; border-color: #eee;}
@@ -251,13 +253,20 @@ body{text-align:center; margin: 0 auto;}
 .tt-post{ background-color: #fefefe; border-color:#eee; color: white;}
 */
 .tt-post{ background-color: transparent; border-color:#eee;}
+
+.tt-post-summary-body,
+.tt-color-search-results-header,
 .tt-post-body{color: grey;}
+
 .tt-post-panel-head{ background-color: #fcfcfc; border-color:#eee;}
 	
 
 .tt-conversation-count{background-color: #F5F23B; border-color: white; color: grey;}
 .tt-reply-count{background-color: #cecece; border-color: white; color: #fefefe;}
-
+.tt-color-options-button{border-color: grey; color:grey;}
+.tt-color-options-button-hover{border-color: black; color:black;}
+.tt-color-post-summary{background-color:transparent;}
+.tt-color-post-summary-hover{background-color:#eee;}
 
 
 	
