--- a/ ttdc --username trevisthomas/River/war/css/basic.css
+++ b/ ttdc --username trevisthomas/River/war/css/basic.css
@@ -43,9 +43,12 @@ body{text-align:center; margin: 0 auto;}
 .tt-post-panel-head{border-style: solid; border-width: 0 0 1px 0;}
 .tt-post-panel-head-date,
 .tt-post-panel-head-creator{padding: 0 0 0 2px;}
+
+.tt-post-panel-head-date{display:inline; clear: both; float: right;}
 .tt-post-expanded{ border-width: 1px; border-style:solid; margin: 2px 0; padding:0px; width: 100%;}
 .tt-post-conversation{ margin: 0 0 20px 0;}
 .tt-options-button{border: 1px solid; padding:2px;}
+.tt-post-footer{text-align: right;}
 
 .tt-post-summary-body{padding:0px 2px;}
 
@@ -258,7 +261,8 @@ body{text-align:center; margin: 0 auto;}
 .tt-color-search-results-header,
 .tt-post-body{color: grey;}
 
-.tt-post-panel-head{ background-color: #fcfcfc; border-color:#eee;}
+.tt-post-panel-head{ background-color: #f5f5f5; border-color:#eee;}
+.tt-post-panel-content{ background-color: #fcfcfc; }
 	
 
 .tt-conversation-count{background-color: #F5F23B; border-color: white; color: grey;}
