--- a/trunk/ ttdc --username trevisthomas/River/war/css/basic.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/basic.css
@@ -273,5 +273,5 @@ body{text-align:center; margin: 0 auto;}
 .tt-color-post-summary{background-color:transparent;}
 .tt-color-post-summary-hover{background-color:#eee;}
 
-
+.tt-rich-text-area{background-color:#eee; color:grey; text-align: left; line-height: normal;}
 	
