--- a/ ttdc --username trevisthomas/River/war/css/basic.css
+++ b/ ttdc --username trevisthomas/River/war/css/basic.css
@@ -2,12 +2,6 @@
 @import "common/stars/stars-orange.css";
 @import "common/icons/icons-grey.css";
 
-html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, dl, li, dt, dd, p, blockquote, pre, form, fieldset, table, th, td {vertical-align: top; margin: 0; padding: 0; }
-table {border-spacing: 0px; border-collapse: collapse;} /*Evil*/
-ul{list-style-type: none;}
-
-body{text-align:center; margin: 0 auto;}
-/*Above for IE, below for FF*/
 .tt-view-container{width:1000px; text-align:center; margin: 0 auto;}
 
 .tt-border{ border:1px black solid;}
@@ -250,7 +244,8 @@ body{text-align:center; margin: 0 auto;}
 
 .tt-post-expanded{ border-color: #black;}
 
-
+.tt-post ul{list-style: disc; padding: 0 0 0 20px;}
+.tt-post ol{list-style: decimal; padding: 0 0 0 20px;}
 /*
 .tt-post-panel-root
 .tt-post{ background-color: #fefefe; border-color:#eee; color: white;}
@@ -274,4 +269,7 @@ body{text-align:center; margin: 0 auto;}
 .tt-color-post-summary-hover{background-color:#eee;}
 
 .tt-rich-text-area{background-color:#eee; color:grey; text-align: left; line-height: normal;}
-	
+.tt-rich-text-area div,
+.tt-rich-text-area p{vertical-align: top; margin: 0; padding: 0;}
+.tt-rich-text-area ul,
+.tt-rich-text-area ol{ margin-top: 0;  margin-bottom: 0; padding-top: 0; padding-bottom: 0;}
