--- a/trunk/ ttdc --username trevisthomas/River/war/css/basic.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/basic.css
@@ -32,7 +32,11 @@
 
 .tt-post-container{ width:100%; }
 .tt-post-fetch-more{ width:100%;}
-.tt-comment-editor{border: 1px solid black; width:500px;}
+.tt-comment-editor{border: 1px solid; width:480px; padding: 2px 10px;}
+.tt-comment-toolbar{margin: 2px 0;}
+.tt-rich-text-iframe{width: 478px; margin: 4px 0;}
+.tt-comment-editor-buttons{float: right;}
+
 .tt-post-panel-content{ margin: 0 0 2px 0; width:100%;}
 .tt-post-panel-head{border-style: solid; border-width: 0 0 1px 0;}
 .tt-post-panel-head-date,
@@ -188,6 +192,16 @@
 .tt-conversation-count{ border: 1px solid; padding: 0px 3px}
 
 
+
+.tt-rich-text-area{background-color:#eee; color:grey; text-align: left; line-height: normal;}
+.tt-rich-text-area div,
+.tt-rich-text-area p{vertical-align: top; margin: 0; padding: 0;}
+.tt-rich-text-area ul,
+.tt-rich-text-area ol{ margin-top: 0;  margin-bottom: 0; padding-top: 0; padding-bottom: 0;}
+
+
+
+
 /* 
  * Colors to be moved into color css
  */
@@ -242,6 +256,7 @@
 .tt-color-nws{ color: red; }
 .tt-color-inf{ color: #F5F23B; }
 
+.tt-comment-editor,
 .tt-post-expanded{ border-color: #black;}
 
 .tt-post ul{list-style: disc; padding: 0 0 0 20px;}
@@ -268,8 +283,6 @@
 .tt-color-post-summary{background-color:transparent;}
 .tt-color-post-summary-hover{background-color:#eee;}
 
-.tt-rich-text-area{background-color:#eee; color:grey; text-align: left; line-height: normal;}
-.tt-rich-text-area div,
-.tt-rich-text-area p{vertical-align: top; margin: 0; padding: 0;}
-.tt-rich-text-area ul,
-.tt-rich-text-area ol{ margin-top: 0;  margin-bottom: 0; padding-top: 0; padding-bottom: 0;}
+
+
+
